[project]
name = "agentlio-market-intel"
version = "0.1.0"
description = "MCP server for mobile app market intelligence from Google Play and App Store reviews"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
  { name = "Agentlio" }
]
dependencies = [
  "mcp[cli]>=1.6.0",
  "google-play-scraper>=1.2.7",
  "app-store-scraper>=0.3.5",
  "pandas>=2.2.0",
  "redis>=5.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.9.0",
  "mypy>=1.11.0"
]

[project.scripts]
agentlio-market-intel = "src.server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
